# src/controllers/articleController.js
@@ -1,0 +1,28 @@
+const responseHelper = require('../helpers/responseHelper');
+const articleService = require('../services/articleService');
+const userService = require('../services/userService');
+const errorMessages = require('../constants/errorMessages');
+const errorCodes = require('../constants/errorCodes');
+
+/**
+ * Handler for POST /users/{userId}/articles
+ *
+ * @param {Request} req - The Express request object.
+ * @param {Response} res - The Express response object.
+ */
+const create = async (req, res) => {
+  const { userId } = req.params;
+  const payload = req.body;
+
+  const user = await userService.findById(userId, { raw: true });
+  if (!user) {
+    responseHelper.notFound(req, res, errorMessages.USER_NOT_FOUND, errorCodes.USER_NOT_FOUND);
+    return;
+  }
+
+  const data = { userId, ...payload };
+  const response = await articleService.create(data);
+  responseHelper.created(req, res, response);
+};
+
+module.exports = { create };
