# src/openapi/api.yaml
@@ -7,6 +7,8 @@ servers:
 tags:
   - name: Users 👤
     description: Endpoints for managing users, including user creation, retrieval, and updates.
+  - name: Articles 📰
+    description: Endpoints for managing articles, including article creation, retrieval, and updates.
 security:
   - bearerAuth: []
 paths:
@@ -305,8 +307,8 @@ paths:
             type: string
             example: 550e8400-e29b-41d4-a716-446655440000
       responses:
-        204:
-          description: User successfully deleted
+        200:
+          $ref: '#/components/responses/Ok'
         400:
           $ref: '#/components/responses/BadRequest'
         401:
@@ -318,12 +320,68 @@ paths:
         500:
           $ref: '#/components/responses/InternalServerError'
 
+  /users/{userId}/articles:
+    post:
+      tags:
+        - Articles 📰
+      summary: Create a new article
+      description: This endpoint creates a new article with the provided title, content, and optional image.
+      x-eov-operation-handler: articleController
+      operationId: create
+      parameters:
+        - name: userId
+          in: path
+          description: The unique identifier of the user.
+          required: true
+          schema:
+            type: string
+            example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+      requestBody:
+        $ref: '#/components/requestBodies/PostArticleRequestBody'
+      responses:
+        201:
+          description: Article successfully created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    format: int64
+                    description: HTTP status code indicating successful operation.
+                    default: 201
+                  message:
+                    type: string
+                    description: Descriptive message of the operation.
+                    default: Created
+                  data:
+                    $ref: '#/components/schemas/Article'
+                additionalProperties: false
+                required:
+                  - statusCode
+                  - message
+                  - data
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        403:
+          $ref: '#/components/responses/Forbidden'
+        404:
+          $ref: '#/components/responses/NotFound'
+        409:
+          $ref: '#/components/responses/Conflict'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
 components:
   securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
+
   schemas:
     User:
       type: object
@@ -367,6 +425,45 @@ components:
         - name
         - email
         - biography
+
+    Article:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          description: Unique identifier for the article.
+          example: 550e8400-e29b-41d4-a716-446655440000
+        title:
+          type: string
+          description: Title of the article.
+        content:
+          type: string
+          description: Main content of the article.
+        image:
+          type: string
+          description: URL of the article image.
+        userId:
+          type: string
+          format: uuid
+          description: ID of the user who created the article.
+        createdAt:
+          type: string
+          format: date-time
+          description: Timestamp when the article was created.
+        updatedAt:
+          type: string
+          format: date-time
+          description: Timestamp when the article was last updated.
+      additionalProperties: false
+      required:
+        - id
+        - title
+        - content
+        - userId
+        - createdAt
+        - updatedAt
+
   requestBodies:
     PostRegisterRequestBody:
       required: true
@@ -396,6 +493,7 @@ components:
               - email
               - password
             additionalProperties: false
+
     PostLoginRequestBody:
       required: true
       content:
@@ -415,6 +513,7 @@ components:
               - email
               - password
             additionalProperties: false
+
     PutUserRequestBody:
       required: true
       content:
@@ -431,6 +530,31 @@ components:
                 description: A short biography of the user.
                 example: A software developer from California.
             additionalProperties: false
+
+    PostArticleRequestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              title:
+                type: string
+                description: The title of the article.
+                example: 'Introduction to Sequelize'
+              content:
+                type: string
+                description: The main content of the article.
+                example: 'Sequelize is a Node.js ORM...'
+              image:
+                type: string
+                description: URL to an image related to the article.
+                example: 'https://example.com/image.jpg'
+            required:
+              - title
+              - content
+            additionalProperties: false
+
   responses:
     Ok:
       description: OK
@@ -447,7 +571,7 @@ components:
               message:
                 type: string
                 description: Descriptive message indicating successful operation.
-                default: Request successful.
+                default: OK
               data:
                 type: object
                 description: Additional data returned with the response, if applicable.
